styles/index.css
@import "./normalize.css";

:root {
  --header--background-color: rgba(76, 121, 136, 0.8);
  --color-white: #fff;
  --color-lightgreen: #90ee90;
  --color-lightblue: #b8e0ee;
}

/* GENERAL */
html {
  font-size: 62.5%;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Open Sans", "Montserrat",
    sans-serif, "Noto Serif Display", serif;
  font-size: 1.8rem;
}

header {
  background: url(/images/header/Punos-Silas.webp);
  background-size: cover;
}

/* NAVIGATION BAR */
.navi {
  background-color: var(--header--background-color);
}

.navi--clickable {
  display: flex;
  justify-content: right;
}

.collapsible__content {
  max-height: 0;
  opacity: 0;
  overflow: hidden;
  transition: all 0.3s;
}

.collapsible--expanded .collapsible__content {
  max-height: 100vh;
  opacity: 1;
}

.navi.collapsible--expanded .navi--dropdown-mobile-icon {
  border-radius: 5px;
  box-shadow: 0 0 0 3px var(--color-lightgreen);
  opacity: 1;
}

.navi--dropdown-mobile-icon {
  border-radius: 5px;
  cursor: pointer;
  height: 6rem;
  margin: 0.5rem 1rem;
  opacity: 0.7;
  transition: box-shadow 0.25s;
  width: 6rem;
}

.navi a {
  color: var(--color-white);
  padding: 0.7rem 0.5rem;
  text-decoration: none;
  transition: color 0.3s;
}

.navi a:hover {
  color: var(--color-lightgreen);
}

.navi--list {
  list-style: none;
  margin: 0;
  padding: 0 1rem;
  width: 100%;
}

.navi--icon {
  color: var(--color-white);
  font-size: 1.3rem;
  padding: 0.5rem 0.5rem;
}

.navi--category {
  border-bottom: 1px solid #222;
  font-size: 1.8rem;
  letter-spacing: 0.3rem;
  padding-top: 1.2rem;
}

/* NON-MOBILE */
@media screen and (min-width: 768px) {
  .navi {
    height: 5rem;
  }

  .collapsible__content {
    opacity: 1;
    overflow: visible;
  }

  .navi--dropdown-mobile-icon {
    display: none;
  }

  .navi--list {
    display: flex;
    width: auto;
    justify-content: right;
  }

  .navi--category {
    border: 0;
    font-size: 1.4rem;
    padding: 1.5rem 0;
    padding-left: 1rem;
  }

  .material-icons {
    font-size: 1rem;
    padding: 0.2rem;
  }
}

@media screen and (min-width: 1024px) {
  .navi--category {
    padding-right: 1rem;
  }
}

/* HEADING */

.heading--cell {
  min-height: 25vh;
  position: static;
}

.heading--title {
  align-items: center;
  background-color: var(--header--background-color);
  color: var(--color-lightgreen);
  display: flex;
  font-family: "Montserrat", sans-serif;
  font-size: 2rem;
  font-weight: 900;
  justify-content: center;
  letter-spacing: 1rem;
  line-height: 3rem;
  padding-top: 2rem;
  text-shadow: -3px -3px 1px blueviolet;
  text-transform: uppercase;
}

.subheading--cell {
  min-height: 40vh;
  padding: 1rem 0;
}

.subheading--intro {
  background-color: var(--header--background-color);
  border-radius: 3rem;
  padding: 2rem;
  margin: 2rem;
}

.subheading--intro-name {
  color: var(--color-white);
  font-size: 1.2rem;
  letter-spacing: 2rem;
  line-height: 2rem;
  margin: 0 1rem;
  text-shadow: -1px -1px 1px blueviolet;
  text-transform: uppercase;
}

.subheading--list-cell {
  display: flex;
  justify-content: right;
}

.subheading--list {
  list-style: none;
  margin-top: 0;
}

.subheading--list-item {
  color: var(--color-white);
  font-size: 1.7rem;
  letter-spacing: 0.7rem;
  padding: 0.5rem;
  text-align: right;
  text-shadow: -1px -1px 1px blueviolet;
}

.subheading--intro-face {
  opacity: 1;
  overflow: hidden;
}

.subheading--intro-face img {
  width: 20rem;
  height: 20rem;
}

/* NONMOBILE */
@media screen and (min-width: 768px) {
  .heading--cell {
    min-height: 35vh;
    padding: 0;
    position: static;
  }

  .heading--title {
    font-size: 3rem;
    letter-spacing: 2rem;
    line-height: 4.7rem;
    padding-top: 6rem;
    text-shadow: -5px -5px 1px blueviolet;
  }

  .subheading--cell {
    display: flex;
    justify-content: center;
  }

  .subheading--intro {
    min-width: 50vh;
    padding: 2rem;
  }

  .subheading--intro-name {
    letter-spacing: 3.5rem;
    line-height: 3rem;
    padding: 1rem 1rem;
    text-shadow: -1.5px -1.5px 1px var(--color-lightgreen);
  }

  .subheading--list-item {
    letter-spacing: 1rem;
    padding: 1rem;
  }
}

@media screen and (min-width: 1440px) {
  .heading--title {
    font-size: 4rem;
    line-height: 6.7rem;
    padding-top: 3rem;
    text-shadow: -9px -9px 1px blueviolet;
  }

  .subheading--cell {
    padding-top: 2rem;
  }

  .subheading--intro-face img {
    width: 15rem;
    height: 15rem;
  }

  .subheading--intro-name {
    font-size: 1.2rem;
  }

  .subheading--list {
    margin-top: 0;
  }

  .subheading--list-item {
    letter-spacing: 1.5rem;
    padding: 1rem 1rem;
  }
}

/* LOGO SECTION */
.logo--main {
  margin: 2rem 6rem;
}

.logo--display {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.logo--html,
.logo--css,
.logo--js,
.logo--python,
.logo--git {
  padding: 2rem 2rem;
}

.logo--html {
  height: 5rem;
  width: 5rem;
}

.logo--css {
  height: 5rem;
  width: 4.5rem;
}

.logo--js {
  height: 4.5rem;
  width: 4rem;
}

.logo--python {
  height: 5rem;
  width: 5rem;
}

.logo--git {
  height: 5rem;
  width: 5rem;
}

/* MOBILE */
@media screen and (max-width: 280px) {
  .logo--main {
    margin: 2rem 1rem;
  }
}

@media screen and (min-width: 530px) {
  .logo--main {
    margin: 2rem 5rem;
  }
}

/* NONMOBILE */
@media screen and (min-width: 768px) {
  .logo--main {
    margin: 5rem 3rem;
  }

  .logo--display {
    align-items: center;
    display: flex;
    justify-content: center;
  }

  .logo--html,
  .logo--css,
  .logo--js,
  .logo--python,
  .logo--git {
    padding: 3rem 3rem;
  }

  .logo--html {
    height: 10rem;
    width: 10rem;
  }

  .logo--css {
    height: 10rem;
    width: 9rem;
  }

  .logo--js {
    height: 9rem;
    width: 8rem;
  }

  .logo--python {
    height: 10rem;
    width: 10rem;
  }

  .logo--git {
    height: 10rem;
    width: 10rem;
  }
}

/* ABOUT */
.about--quote {
  align-items: center;
  display: flex;
  justify-content: center;
  margin: 5rem 0;
}

.about--quote-mj {
  animation-duration: 6s;
  animation-name: fadein-mj;
  display: flex;
  font-family: "Noto Serif Display", serif;
  font-size: 3rem;
  line-height: 4rem;
  margin: 0 3rem;
}

@keyframes fadein-mj {
  from {
    opacity: 0;
    overflow: hidden;
  }
}

.about--quote-guru {
  animation-duration: 7s;
  animation-name: fadein-guru;
  display: flex;
  font-family: "Noto Serif Display", serif;
  font-size: 2.5rem;
  line-height: 4rem;
  margin: 0 3rem;
}

@keyframes fadein-guru {
  from {
    opacity: 0;
    overflow: hidden;
  }
}

.about--portrait-cell {
  margin: 4rem 0;
}

.about--portrait {
  background-image: url();
  display: flex;
  justify-content: center;
  margin-bottom: 15rem;
}

.img--self-portrait {
  background-image: url(../images/about/self-portrait-min.jpg);
  background-size: cover;
  border-radius: 100%;
  height: 30rem;
  margin-bottom: -6.5rem;
  width: 30rem;
}

.resume--btn {
  background: rgba(76, 121, 136, 1);
  border-radius: 40px;
  border: 0;
  color: var(--color-white);
  cursor: pointer;
  font-family: "Montserrat", sans-serif;
  margin-top: 29rem;
  margin-bottom: 7rem;
  padding: 1rem 2rem;
  text-decoration: none;
}

.github--btn {
  border-radius: 100%;
  height: 10rem;
  width: 10rem;
}

.scale .github--btn,
.scale .resume--btn {
  transition: all 0.6s;
}

.resume--btn:hover {
  background: var(--color-white);
  border: 1px solid magenta;
  color: magenta;
  text-transform: uppercase;
}

.scale .github--btn:hover,
.scale .resume--btn:hover {
  transform: scale(1.3);
}

.about--github-cell {
  margin-bottom: 4rem;
}

.icon--btn {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.icon {
  /* class built into svg component */
  margin: 2rem 1rem;
}

.icon--gavel {
  color: gold;
  font-size: 4rem;
}

.about--list {
  list-style: none;
  padding: 0 1rem;
  width: 100%;
}

.about--list-item {
  display: flex;
  flex-wrap: wrap;
}

/* LAPTOPS */
@media screen and (min-width: 1024px) {
  .grid--3x1 {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
  }

  .about--quote-mj {
    font-size: 2rem;
    margin-left: 5rem;
  }

  .about--quote-guru {
    font-size: 2rem;
    margin-right: 2rem;
  }
}

@media screen and (min-width: 1440px) {
  .about--quote-mj {
    font-size: 4rem;
    line-height: 5rem;
    margin-left: 13rem;
  }

  .about--quote-guru {
    font-size: 3.5rem;
    line-height: 5rem;
    margin-right: 4rem;
  }
}

/* PROJECTS */
.projects--showdown-cell {
  display: flexbox;
  flex-wrap: wrap;
}

/* CONTACT */
label {
  display: block;
}

input[type="text"],
input[type="email"],
textarea {
  border: 1px solid var(--color-lightgreen);
  border-radius: 5px;
  padding: 0.5rem 0.7rem;
  transition: border-color 0.15s, box-shadow 0.15s;
}

textarea {
  resize: none;
}

input[type="text"]:focus,
input[type="email"]:focus,
#message:focus {
  border-color: rgb(138, 43, 226);
  box-shadow: 0 0 0 2px rgba(138, 43, 226, 0.3);
  outline: 0;
}

button {
  background: rgb(138, 43, 226);
  border-radius: 5px;
  border: 0;
  color: #fff;
  font-size: 2rem;
  outline: 0;
  padding: 1rem 2rem;
  transition: all 0.3s;
}

button:hover {
  background: var(--color-lightgreen);
  color: rgb(138, 43, 226);
  font-weight: 700;
}

.form--cell {
  background-color: var(--header--background-color);
  line-height: 1.5;
  margin: 0;
  padding: 5rem 2rem;
}

.form--heading {
  color: var(--color-lightgreen);
  font-size: 4rem;
  font-weight: 900;
  text-shadow: -4px -4px 1px blueviolet;
}

.form--group {
  margin-bottom: 1rem;
}

.form--label {
  color: var(--color-lightgreen);
  font-size: 3rem;
  font-weight: bold;
  letter-spacing: 0.3rem;
}

.form--input-field,
textarea {
  width: 90%;
}

.form--profession {
  align-items: center;
  display: flex;
  padding: 0.5rem 0.4rem;
}

.form--btn {
  color: var(--color-white);
  font-size: 80%;
  padding: 0 0.3rem;
}

/* NONMOBILE */
@media screen and (min-width: 768px) {
  .form--cell {
    padding: 5rem 15%;
  }

  button {
    margin-bottom: 6rem;
  }
}

@media screen and (min-width: 1280px) {
  .form--cell {
    padding: 5rem 30%;
  }

  .form--label {
    font-size: 2rem;
    letter-spacing: 0.2rem;
  }

  button {
    font-size: 1.5rem;
  }
}

/* FOOTER */
.footer {
  background: rgba(76, 121, 136, 1);
  color: rgb(194, 194, 194);
  padding: 2rem 0;
}

.footer--cell {
  margin: 1rem 2rem;
}

.footer a {
  color: rgb(194, 194, 194);
  text-decoration: none;
  transition: color 0.3s;
}

.footer a:hover {
  color: var(--color-lightgreen);
}

.footer--heading {
  padding: 0 2rem;
}

.footer--heading h4 {
  margin-bottom: 0.4rem;
}

.footer--heading-icons {
  display: flex;
}

.footer--icon {
  display: flex;
  margin: 0 0.4rem;
  width: 2rem;
  height: 2rem;
}

.footer--icon:hover {
  transform: scale(1.3);
}

.footer--list {
  list-style: none;
  margin-top: 0;
  padding-left: 2rem;
}

.footer--list-item {
  padding: 0.2rem 0;
}

/* NONMOBILE */
@media screen and (min-width: 768px) {
  .footer {
    display: flex;
    flex-wrap: wrap;
    justify-content: left;
  }

  .copyrights {
    padding: 0 2rem;
  }
}

@media screen and (min-width: 1024px) {
  .copyrights {
    padding: 0 10rem;
  }
}

